--- a/inst/exercises/reaction_transport/estuaryAnoxia/estuaryAnoxia_A.Rmd
+++ b/inst/exercises/reaction_transport/estuaryAnoxia/estuaryAnoxia_A.Rmd
@@ -1,11 +1,14 @@
 ---
-title: 'Anoxia in the Scheldt estuary'
-subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
+title: "Anoxia in the Scheldt estuary"
 author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
 date: "March 2021"
-output: 
+output:
+  html_document:
+    toc: false
+    df_print: paged
   pdf_document:
-    toc: no 
+    toc: false
+subtitle: Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere
 ---
 
 # Answers
@@ -18,7 +21,7 @@ $$\frac{\partial [NO_3^-]}{\partial t} = D\cdot \frac{\partial^2 [NO_3^-]}{\part
 $$\frac{\partial [NH_3]}{\partial t} = D\cdot \frac{\partial^2 [NH_3]}{\partial x^2 } - v\cdot \frac{\partial [NH_3]}{\partial x } - Nitrification$$
 $$\frac{\partial [O_2]}{\partial t} = D\cdot \frac{\partial^2 [O_2]}{\partial x^2 } - v\cdot \frac{\partial [O_2]}{\partial x } + Aeration - 2 \cdot Nitrification$$
 
-Here, $D$ is the dispersion coefficient due to tidal mixing, and $v$ is the advective velocity (in $m~s^{-1}$), calculated from the discharge (*Q*) and cross-sectional area (*A*) as $v=Q/A$. Thus, the 1st and 2nd term in the differential equations describe the rate of change due to transport by dispersion (diffusion-like) and advection, respectively. Note that the parameters characterizing the magnitude of this change are the *same* for each component, which is because all components are *dissolved* substances affected in the same way by the water flow. Also note that we assumed that $D$ and $u$ are *not* varying along the estuary, which is why we could take them out of the spatial derivatives.
+Here, $D$ is the dispersion coefficient due to tidal mixing, and $v$ is the advective velocity (in $m~s^{-1}$), calculated from the discharge (*Q*) and cross-sectional area (*A*) according to $v=Q/A$. Thus, the 1st and 2nd term in the differential equations describe the rate of change due to transport by dispersion (diffusion-like) and advection, respectively. Note that the parameters characterizing the magnitude of this change are the *same* for each component, which is because all components are *dissolved* substances affected in the same way by the water flow. Also note that we assumed that $D$ and $u$ are *not* varying along the estuary, which is why we could take them out of the spatial derivatives.
 
 The boundary conditions at the upper boundary (river side): $[O_2]_{x=0} = 0.1$, $[NO_3^-]_{x=0} = 0.3$, $[NH_3]_{x=0} = 0.1$.
 The boundary conditions at the lower boundary (sea side): $[O_2]_{x=1e5} = 0.3$, $[NO_3^-]_{x=1e5} = 0.050$, $[NH_3]_{x=1e5} = 0.010$. All values are in $mol~m^{-3}$.
@@ -85,16 +88,17 @@ Scheldt1D <- function(t, state, parms) { # state is a LONG vector of state varia
     # Transport - tran.1D solves the "transport terms" (spatial derivatives).
     # It also implements the boundary conditions!
     TranOxygen <- tran.1D(C = Oxygen,
-              C.up = riverO2, C.down = seaO2,  # upstream and downstream concentrations
-              D = Ddisp, v = v, dx = Grid)
+                          C.up = riverO2,  # upstream concentration
+                          C.down = seaO2,  # downstream concentration
+                          D = Ddisp, v = v, dx = Grid)
 
     TranNitrate <- tran.1D(C = Nitrate,
-              C.up = riverNit, C.down = seaNit,
-              D = Ddisp, v = v, dx = Grid)
+                          C.up = riverNit, C.down = seaNit,
+                          D = Ddisp, v = v, dx = Grid)
 
     TranAmmonia <- tran.1D(C = Ammonia,
-              C.up = riverAmm, C.down = seaAmm,
-              D = Ddisp, v = v, dx = Grid)
+                          C.up = riverAmm, C.down = seaAmm,
+                          D = Ddisp, v = v, dx = Grid)
 
     # Nitrification rate (calculated in every location)
     Nitrification   <- rnitri * Ammonia * Oxygen/(Oxygen+ksO2)
@@ -108,21 +112,25 @@ Scheldt1D <- function(t, state, parms) { # state is a LONG vector of state varia
     dOxygen.dt   <- TranOxygen$dC   - 2*Nitrification + Aeration
     
     return(list(c(dOxygen.dt, dNitrate.dt, dAmmonia.dt),   # the rates of change
-           TotalNitrogen  = mean(Nitrate + Ammonia),  
+           TotalNitrogen  = mean(Nitrate + Ammonia),
+           # process rates per volume (mol m-3 d-1):
            Nitrification  = Nitrification, 
            Aeration       = Aeration,
-           NH3influx      = TranAmmonia$flux.up,
-           NO3influx      = TranNitrate$flux.up,
-           O2influx       = TranOxygen$flux.up,
-           NH3efflux      = TranAmmonia$flux.down,
-           NO3efflux      = TranNitrate$flux.down,
-           O2efflux       = TranOxygen$flux.down,
-           # total fluxes in+out at model boundaries
-           TotNinflux     = TranAmmonia$flux.up + TranNitrate$flux.up,
-           TotNefflux     = TranAmmonia$flux.down + TranNitrate$flux.down,
-           # integrated rates along the modeled domain
-           TotalNitrification = sum(Nitrification * Grid$dx),
-           TotalAeration      = sum(Aeration      * Grid$dx)
+           # import/export rates at the domain boundaries (mol d-1):
+           NH3import      = TranAmmonia$flux.up * Area,
+           NO3import      = TranNitrate$flux.up * Area,
+           O2import       = TranOxygen$flux.up  * Area,
+           NH3export      = TranAmmonia$flux.down * Area,
+           NO3export      = TranNitrate$flux.down * Area,
+           O2export       = TranOxygen$flux.down  * Area,
+           # total import/export rates at the domain boundaries (mol d-1):
+           TotNimport     = (TranAmmonia$flux.up + 
+                             TranNitrate$flux.up) * Area,
+           TotNexport     = (TranAmmonia$flux.down + 
+                             TranNitrate$flux.down) * Area,
+           # integrated rates over the volume of the modeled domain (mol d-1):
+           TotalNitrification = sum(Nitrification * Area * Grid$dx),
+           TotalAeration      = sum(Aeration      * Area * Grid$dx)
           ))
     })
 }
@@ -133,8 +141,9 @@ Scheldt1D <- function(t, state, parms) { # state is a LONG vector of state varia
 We estimate the steady-state solution for the current situation and for the 1970s.
 
 ```{r, fig.height = 8, fig.width = 8}
-Scheldt00 <- steady.1D(y = state.ini, parms = pars, func = Scheldt1D, positive = TRUE,
-                  nspec = length(SVnames), dimens = N, names = SVnames)
+Scheldt00 <- steady.1D(y = state.ini, parms = pars, func = Scheldt1D, 
+                       positive = TRUE, nspec = length(SVnames), 
+                       dimens = N, names = SVnames)
 
 # The parameters for the 1970s
 par70 <- pars
@@ -143,8 +152,9 @@ par70["seaNit"]   <- 0.02    # marine nitrate concentration
 par70["riverAmm"] <- 0.60    # river ammonium concentration
 par70["seaAmm"]   <- 0.02    # marine ammonium concentration
 
-Scheldt70 <- steady.1D(y = state.ini, parms = par70, func = Scheldt1D, positive = TRUE,
-                  nspec = length(SVnames), dimens = N, names = SVnames)
+Scheldt70 <- steady.1D(y = state.ini, parms = par70, func = Scheldt1D, 
+                       positive = TRUE, nspec = length(SVnames), 
+                       dimens = N, names = SVnames)
 ```
 
 ```{r, fig.height = 7, fig.width = 10}
@@ -154,25 +164,25 @@ plot(Scheldt00, Scheldt70, grid=Grid$x.mid/1000, lwd=2, lty=1, mfrow=NULL,
      which = "Nitrification", ylab="molN/m3/d", xlab="distance (km)")
 plot(Scheldt00, Scheldt70, grid=Grid$x.mid/1000, lwd=2, lty=1, mfrow=NULL, 
      which = "Aeration", ylab="molO2/m3/d", xlab="distance (km)")
-legend("topright", legend = c("current", "1970s"), lty=1, lwd=2, col=1:2, bty="n")
+legend("topright", legend = c("2000", "1970s"), lty=1, lwd=2, col=1:2, bty="n")
 ```
 
 
 ## Budget in Mmol/year
 
-The current model function returns the fluxes in $mol~m^{-2}~d^{-1}$. To construct the budget for the entire estuary, we converts the values to $10^6~mol~yr^{-1}$. These budget values can be added to a diagram that represents the relevant state variables for the *entire* estuary as boxes, similar to the one shown in Figure 1.
+The current model function returns the rates in $mol~d^{-1}$. To construct the annual budget in $Mmol~yr^{-1}$, we use the conversion factor $365/1e6$. The budget values can be added to a diagram that represents the relevant state variables for the *entire* estuary as boxes, similar to the one shown in Figure 1.
 
 ```{r}
-f1       <- Area/1e6*365        # from mol m-2 d-1 to 10^6 mol yr-1
-toselect <- c("NH3influx", "NO3influx", "O2influx", 
-              "NH3efflux", "NO3efflux", "O2efflux", 
+f1       <- 365/1e6         # from mol d-1 to 10^6 mol yr-1
+toselect <- c("NH3import", "NO3import", "O2import", 
+              "NH3export", "NO3export", "O2export", 
               "TotalNitrification", "TotalAeration" )
 BUDGET <- data.frame(Megamol_per_yr_2000  = unlist(Scheldt00[toselect]), 
                      Megamol_per_yr_1970s = unlist(Scheldt70[toselect]))*f1
 knitr::kable(BUDGET, digits = 0)
 ```
 
-![Nitrogen budget for the entire Western Scheldt estuary. Values are shown in the table above.](NitBudget.png)
+![Figure 1: Nitrogen and oxygen (O2) budgets for the entire Western Scheldt estuary. Values are shown in the table above.](N-O2-Budget.png)
 
 ## The impact of ammonia concentration in inflowing waters
 
